--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # .gitignore for frontend
 node_modules
 .env
+env
+__pycache__
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
